<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoading"
            type="Boolean"/>
        <variable
            name="tvShowImageURL"
            type="String" />

        <variable
            name="tvShowName"
            type="String" />
        <variable
            name="networkCountry"
            type="String" />
        <variable
            name="status"
            type="String" />
        <variable
            name="startedDate"
            type="String" />
        <variable
            name="description"
            type="String" />

        <variable
            name="rating"
            type="String" />
        <variable
            name="genre"
            type="String" />
        <variable
            name="runtime"
            type="String" />

        <import type = "android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activites.TVShowDetailsActivity"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:id="@+id/slideViewPager"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/viewFadingEdge"
                    android:background="@drawable/background_fading_edge"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/slideViewPager"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutSliderIndicators"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/viewFadingEdge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageTvShow"
                    />
                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:id="@+id/imageBack"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorTextIcon"
                    android:src="@drawable/ic_back"/>
                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:id="@+id/imageTvShow"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:imageURL="@{tvShowImageURL}"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/slideViewPager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/slideViewPager"
                    app:riv_corner_radius="@dimen/_6sdp"/>
                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShowName}"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageTvShow"
                    app:layout_constraintTop_toBottomOf="@id/slideViewPager"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/networkCountry"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{networkCountry}"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorTextOther"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textName"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textStatus"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@android:color/holo_green_light"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/networkCountry"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textStarted"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Started on: " + startedDate}'
                    android:textColor="@color/colorTextSecondry"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textStatus"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDescription"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:includeFontPadding="false"
                    android:maxLines="4"
                    android:text="@{description}"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="@dimen/_11sdp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/imageTvShow"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textReadMore"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/meduim"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/textDescription"
                    app:layout_constraintTop_toBottomOf="@id/textDescription"
                    />
                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondry"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/textReadMore"/>

                <LinearLayout
                    android:id="@+id/layoutMisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"

                    app:layout_constraintTop_toBottomOf="@+id/viewDivider"
                   > <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/colorTextOther"
                    android:src="@drawable/ic_star"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textRating"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/bold"
                        android:includeFontPadding="false"
                        android:text="@{rating}"
                        android:textColor="@color/colorTextIcon"
                        android:textSize="@dimen/_12sdp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_12sdp"
                        />
                    <TextView
                        android:id="@+id/textGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/regular"
                        android:includeFontPadding="false"
                        android:text="@{genre}"
                        android:textColor="@color/colorTextIcon"
                        android:textSize="@dimen/_12sdp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_12sdp"
                        />
                    <TextView
                        android:id="@+id/textRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/regular"
                        android:includeFontPadding="false"
                        android:text="@{runtime}"
                        android:textColor="@color/colorTextIcon"
                        android:textSize="@dimen/_12sdp"
                        />



                </LinearLayout>
                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondry"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/layoutMisc"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonwebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/meduim"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buttonEpisodes"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivider2"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEpisodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/meduim"
                    android:includeFontPadding="false"
                    android:text="@string/episodes"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#212121"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorTextOther"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonwebsite"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivider2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>






       <ProgressBar
           android:layout_width="@dimen/_25sdp"
           android:layout_height="@dimen/_25sdp"
           android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default =gone}"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/background_fab"
            android:id="@+id/imageWatchList"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_watchlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:tint="@color/colorTextIcon"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>